add image slider to home page

--- a/home_page/index.html
+++ b/home_page/index.html
@@ -76,11 +76,30 @@
 					</div>
 				</div>
 
-				<div class="img_content">
-					<img src="resource/img1.jpg" alt="img">
+<!-- 				image slider start -->
+				<div id="slider">
+					<ul id="slideWrap">
+						<li>
+							<img src="resource/preview_img1.png" alt="img">
+						</li>
+						<li>
+							<img src="resource/preview_img2.png" alt="img">
+						</li>
+						<li>
+							<img src="resource/preview_img3.png" alt="img">
+						</li>
+						<li>
+							<img src="resource/preview_img4.png" alt="img">
+						</li>
+						<li>
+							<img src="resource/preview_img5.png" alt="img">
+						</li>
+					</ul>
+					<a id="prev" href="#">&#8810;</a>
+    				<a id="next" href="#">&#8811;</a>
 				</div>
 			</div>
-
+<!-- 					image slider content end -->
 			<div class="under_block">
 				<div class="under_content">
 
