add preview gif

--- a/home_page/index.html
+++ b/home_page/index.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" href="../default.css">
 	<link rel="stylesheet" href="../startstyle.css">
 	<link rel="stylesheet" href="style.css">
-	<title>Rozlouzeni</title>
+	<title>VinoKrajina</title>
 </head>
 <body>
 
