--- a/shop_page/index.html
+++ b/shop_page/index.html
@@ -6,7 +6,7 @@
 		<link rel="stylesheet" href="../default.css">
 	<link rel="stylesheet" href="../startstyle.css">
 	<link rel="stylesheet" href="style.css">
-	<title>Vina</title>
+	<title>Vitrina</title>
 </head>
 <body>
 
