--- a/shop_page/index.html
+++ b/shop_page/index.html
@@ -4,7 +4,6 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" href="../default.css">
-	<link rel="stylesheet" href="../startstyle.css">
 	<link rel="stylesheet" href="style.css">
 	<title>Vitrina</title>
 </head>
@@ -281,7 +280,7 @@
 
 
 	</div>
-	<script src="../jq/jquery-3.6.0.slim.min.js"></script>
+	<script src="../scripts.js"></script>
 
 			
 </body>
